--- a/templates/generals.page.html
+++ b/templates/generals.page.html
@@ -70,6 +70,29 @@
             attention.custom({
                 title: 'Choose your dates',
                 msg: html,
+                willOpen: () => {
+                    const elem = document.getElementById("reservation-dates-modal");
+                    const rp = new DateRangePicker(elem, {
+                        format: 'yyyy-mm-dd',
+                        showOnFocus: true,
+                    })
+                },
+                callback: (result) => {
+                    console.log("called")
+
+                    let form = document.getElementById("check-availability-form")
+                    let formData = new FormData(form)
+                    formData.append("csrf_token", "{{.CSRFToken}}")
+
+                    fetch('/search-availability-json', {
+                        method: "post",
+                        body: formData,
+                    })
+                        .then(response => response.json())
+                        .then(data => {
+                            console.log(data)
+                        })
+                }
             });
         })
     </script>
