add some backend validation

--- a/templates/generals.page.html
+++ b/templates/generals.page.html
@@ -77,6 +77,12 @@
                         showOnFocus: true,
                     })
                 },
+
+                didOpen: () => {
+                    document.getElementById("start").removeAttribute("disabled");
+                    document.getElementById("end").removeAttribute("disabled");
+                },
+
                 callback: (result) => {
                     console.log("called")
 
