--- a/templates/make-reservation.page.html
+++ b/templates/make-reservation.page.html
@@ -6,11 +6,14 @@
             <div class="col">
                 <h1 class="mt-3">Make Reservation</h1>
 
-                <form method="post" action="" class="needs-validation" novalidate>
-
+                <form method="post" action="" class="" novalidate>
+                    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <div class="form-group mt-3">
                         <label for="first_name">First Name:</label>
-                        <input class="form-control"
+                        {{with .Form.Errors.Get "first_name"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "first_name" }} is-invalid {{end}}"
                                id="first_name" autocomplete="off" type='text'
                                name='first_name' value="" required>
                     </div>
