--- a/templates/make-reservation.page.html
+++ b/templates/make-reservation.page.html
@@ -5,7 +5,9 @@
         <div class="row">
             <div class="col">
                 <h1 class="mt-3">Make Reservation</h1>
+                <p><strong>Reservation Details</strong></p>
 
+                {{$res := index .Data "reservation"}}
                 <form method="post" action="" class="" novalidate>
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                     <div class="form-group mt-3">
@@ -15,28 +17,37 @@
                         {{end}}
                         <input class="form-control {{with .Form.Errors.Get "first_name" }} is-invalid {{end}}"
                                id="first_name" autocomplete="off" type='text'
-                               name='first_name' value="" required>
+                               name='first_name' value="{{$res.FirstName}}" required>
                     </div>
 
                     <div class="form-group">
                         <label for="last_name">Last Name:</label>
-                        <input class="form-control"
+                        {{with .Form.Errors.Get "last_name"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "last_name" }} is-invalid {{end}}"
                                id="last_name" autocomplete="off" type='text'
-                               name='last_name' value="" required>
+                               name='last_name' value="{{$res.LastName}}" required>
                     </div>
 
                     <div class="form-group">
                         <label for="email">Email:</label>
-                        <input class="form-control" id="email"
-                               autocomplete="off" type='email'
-                               name='email' value="" required>
+                        {{with .Form.Errors.Get "email"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "email" }} is-invalid {{end}}"
+                               id="email" autocomplete="off" type='email'
+                               name='email' value="{{$res.Email}}" required>
                     </div>
 
                     <div class="form-group">
                         <label for="phone">Phone:</label>
-                        <input class="form-control" id="phone"
-                               autocomplete="off" type='email'
-                               name='phone' value="" required>
+                        {{with .Form.Errors.Get "phone"}}
+                            <label class="text-danger">{{.}}</label>
+                        {{end}}
+                        <input class="form-control {{with .Form.Errors.Get "phone" }} is-invalid {{end}}"
+                               id="phone" autocomplete="off" type='email'
+                               name='phone' value="{{$res.Phone}}" required>
                     </div>
 
                     <hr>
