add warning for user's wrong access routes

--- a/templates/reservation-summary.page.html
+++ b/templates/reservation-summary.page.html
@@ -14,7 +14,7 @@
                     <tbody>
                         <tr>
                             <td>Name:</td>
-                            <td>{{$res.FirstName}}</td>
+                            <td>{{$res.FirstName}} {{$res.LastName}}</td>
                         </tr>
                         <tr>
                             <td>Arrival:</td>
