--- a/templates/base.layout.html
+++ b/templates/base.layout.html
@@ -128,6 +128,18 @@
                 })
             }
 
+            {{with .Error}}
+                notify("{{.}}", "error")
+            {{end}}
+
+            {{with .Flash}}
+                notify("{{.}}", "success")
+            {{end}}
+
+            {{with .Warning}}
+                notify("{{.}}", "warning")
+            {{end}}
+
             function Prompt() {
                 let toast = function (c) {
                     const{
