--- a/templates/make-reservation.page.html
+++ b/templates/make-reservation.page.html
@@ -50,6 +50,19 @@
                                name='phone' value="{{$res.Phone}}" required>
                     </div>
 
+                    <div class="form-group">
+                        <label for="start_date">Start Date:</label>
+                        <input class="form-control" type="text" name="start_date" id="start_date">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="end_date">End Date:</label>
+                        <input class="form-control" type="text" name="end_date" id="end_date">
+                    </div>
+
+                    <input type="hidden" name="room_id" value="1">
+
+
                     <hr>
                     <input type="submit" class="btn btn-primary" value="Make Reservation">
                 </form>
