--- a/templates/make-reservation.page.html
+++ b/templates/make-reservation.page.html
@@ -5,11 +5,21 @@
         <div class="row">
             <div class="col">
                 <h1 class="mt-3">Make Reservation</h1>
-                <p><strong>Reservation Details</strong></p>
-
                 {{$res := index .Data "reservation"}}
+                <p><strong>Reservation Details</strong><br>
+                    Room: {{$res.Room.RoomName}}<br>
+                    Arrival: {{index .StringMap "start_date"}}<br>
+                    Departure: {{index .StringMap "end_date"}}
+
+                </p>
+
                 <form method="post" action="" class="" novalidate>
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+                    <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
+                    <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
+                    <input type="hidden" name="room_id" value="{{$res.RoomID}}">
+                    <input type="hidden" name="room_name" value="{{$res.Room.RoomName}}">
+
                     <div class="form-group mt-3">
                         <label for="first_name">First Name:</label>
                         {{with .Form.Errors.Get "first_name"}}
@@ -50,17 +60,7 @@
                                name='phone' value="{{$res.Phone}}" required>
                     </div>
 
-                    <div class="form-group">
-                        <label for="start_date">Start Date:</label>
-                        <input class="form-control" type="text" name="start_date" id="start_date">
-                    </div>
 
-                    <div class="form-group">
-                        <label for="end_date">End Date:</label>
-                        <input class="form-control" type="text" name="end_date" id="end_date">
-                    </div>
-
-                    <input type="hidden" name="room_id" value="1">
 
 
                     <hr>
