--- a/templates/majors.page.html
+++ b/templates/majors.page.html
@@ -77,6 +77,7 @@
                     const rp = new DateRangePicker(elem, {
                         format: 'yyyy-mm-dd',
                         showOnFocus: true,
+                        minDate: new Date(),
                     })
                 },
 
