add admin functionality to see reservations

--- a/templates/admin.layout.html
+++ b/templates/admin.layout.html
@@ -21,6 +21,10 @@
             .content-wrapper {
                 background: white;
             }
+
+            label {
+                font-weight: bold;
+            }
         </style>
         {{block "css" . }}
 
