add Mark, Delete, Update reservations

--- a/templates/admin-reservations-show.page.html
+++ b/templates/admin-reservations-show.page.html
@@ -61,8 +61,44 @@
 
 
             <hr>
-            <input type="submit" class="btn btn-primary" value="Save Reservation">
-            <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+            <div class="float-start">
+                <input type="submit" class="btn btn-primary" value="Save Reservation">
+                <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+                <a href="#!" class="btn btn-info" onclick="processedRes({{$res.ID}})">Mark as Processed</a>
+            </div>
+            <div class="float-end">
+                <a href="#!" class="btn btn-danger" onclick="deleteRes({{$res.ID}})">Delete</a>
+            </div>
+            <div class="clearfix"></div>
         </form>
     </div>
+{{end}}
+
+{{define "js"}}
+    {{$src := index .StringMap "src"}}
+    <script>
+        function processedRes(id) {
+            attention.custom({
+                icon: 'warning',
+                msg: 'Are you sure?',
+                callback: function (result) {
+                    if (result !== false) {
+                        window.location.href = "/admin/process-reservation/{{$src}}/" + id
+                    }
+                }
+            })
+        }
+
+        function deleteRes(id) {
+            attention.custom({
+                icon: 'warning',
+                msg: 'Are you sure?',
+                callback: function (result) {
+                    if (result !== false) {
+                        window.location.href = "/admin/delete-reservation/{{$src}}/" + id
+                    }
+                }
+            })
+        }
+    </script>
 {{end}}
