work on reservation calendar

--- a/templates/admin-all-reservations.page.html
+++ b/templates/admin-all-reservations.page.html
@@ -12,7 +12,7 @@
     <div class="col-md-12">
         {{$res := index .Data "reservations"}}
 
-        <table class="table table-striped table-hover" id="all-res">
+        <table class="table table-striped" id="all-res">
             <thead>
             <tr>
                 <th>ID</th>
