--- a/templates/admin-reservations-calendar.page.html
+++ b/templates/admin-reservations-calendar.page.html
@@ -5,7 +5,54 @@
 {{end}}
 
 {{define "content"}}
+    {{$now := index .Data "now"}}
+    {{$rooms := index .Data "rooms"}}
+    {{$dim := index .IntMap "days_in_month"}}
+    {{$curMonth := index .StringMap "this_month"}}
+    {{$curYear := index .StringMap "this_month_year"}}
+
     <div class="col-md-12">
-        Reservations calendar content
+        <div class="text-center">
+            <h3>{{formatDate $now "January"}} {{formatDate $now "2006"}}</h3>
+        </div>
+
+        <div class="float-start">
+            <a  class="btn btn-sm btn-outline-secondary"
+               href="/admin/reservations-calendar?y={{index .StringMap "last_month_year"}}&m={{index .StringMap "last_month"}}">&lt;&lt;</a>
+        </div>
+
+        <div class="float-end">
+            <a  class="btn btn-sm btn-outline-secondary"
+               href="/admin/reservations-calendar?y={{index .StringMap "next_month_year"}}&m={{index .StringMap "next_month"}}">&gt;&gt;</a>
+        </div>
+
+        <div class="clearfix"></div>
+
+        <!-- list rooms and calendar -->
+        {{range $rooms}}
+            {{$roomID := .ID}}
+
+            <h4 class="mt-4">{{.RoomName}}</h4>
+
+            <div class="table-responsive">
+                <table class="table table-bordered table-sm">
+                    <tr class="table-primary">
+                        {{range $index := iterate $dim}}
+                            <td class="text-center">
+                                {{$index}}
+                            </td>
+                        {{end}}
+                    </tr>
+
+                    <tr>
+                        {{range $index := iterate $dim}}
+                        <td class="text-center">
+                            <input type="checkbox">
+                        </td>
+                        {{end}}
+                    </tr>
+                </table>
+            </div>
+        {{end}}
     </div>
 {{end}}
