--- a/templates/admin-reservations-show.page.html
+++ b/templates/admin-reservations-show.page.html
@@ -63,7 +63,11 @@
             <hr>
             <div class="float-start">
                 <input type="submit" class="btn btn-primary" value="Save Reservation">
-                <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+                {{if eq $src "cal"}}
+                    <a href="#!" onclick="window.history.go(-1)" class="btn btn-warning">Cancel</a>
+                {{else}}
+                    <a href="/admin/reservations-{{$src}}" class="btn btn-warning">Cancel</a>
+                {{end}}
                 <a href="#!" class="btn btn-info" onclick="processedRes({{$res.ID}})">Mark as Processed</a>
             </div>
             <div class="float-end">
