--- a/templates/admin-new-reservations.page.html
+++ b/templates/admin-new-reservations.page.html
@@ -28,7 +28,7 @@
                 <tr>
                     <td>{{.ID}}</td>
                     <td>
-                        <a href="/admin/reservations/new/{{.ID}}">
+                        <a href="/admin/reservations/new/{{.ID}}/show">
                             {{.FirstName}} {{.LastName}}
                         </a>
                     </td>
