--- a/templates/about.page.html
+++ b/templates/about.page.html
@@ -4,7 +4,8 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>This is the about page</h1>
+                <h1>This is my first website powered by Go</h1>
+                <p>Many functions have not been implemented</p>
 
             </div>
         </div>
