--- a/templates/contact.page.html
+++ b/templates/contact.page.html
@@ -2,5 +2,6 @@
 
 
 {{define "content"}}
-    <h1>This is contact page.</h1>
+    <h1>Contact me!</h1>
+    <p>My <a href="https://github.com/454270186">Github</a>: Erfei Yu</p>
 {{end}}
