--- a/templates/home.page.html
+++ b/templates/home.page.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1 class="text-center mt-4">Welcome to Fort Smythe Bed and Breakfast</h1>
+                <h1 class="text-center mt-4">Welcome to XiaoFei Hotel</h1>
                 <p>
                     Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.
                     Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation to remember.
